RESOLVED FIXED209299
REGRESSION (r258679): [ Mac ] fast/scrolling/arrow-key-scroll-in-rtl-document.html is failing and timing out
https://bugs.webkit.org/show_bug.cgi?id=209299
Summary REGRESSION (r258679): [ Mac ] fast/scrolling/arrow-key-scroll-in-rtl-document...
Truitt Savell
Reported 2020-03-19 12:43:43 PDT
fast/scrolling/arrow-key-scroll-in-rtl-document.html This test became a frequent flaky failure and timeout after the changes in https://trac.webkit.org/changeset/258679/webkit I am able to reproduce this issue on 258679 but not 258678 using command: run-webkit-tests --iterations 2000 --exit-after-n-failures 1 --exit-after-n-crashes-or-timeouts 1 --debug-rwt-logging --no-retry --force --no-build -f fast/scrolling/arrow-key-scroll-in-rtl-document.html History: https://results.webkit.org/?suite=layout-tests&test=fast%2Fscrolling%2Farrow-key-scroll-in-rtl-document.html Diff: --- /Volumes/Data/slave/catalina-release-tests-wk2/build/layout-test-results/fast/scrolling/arrow-key-scroll-in-rtl-document-expected.txt +++ /Volumes/Data/slave/catalina-release-tests-wk2/build/layout-test-results/fast/scrolling/arrow-key-scroll-in-rtl-document-actual.txt @@ -1 +1 @@ -PASS: scrollLeft is -120 +FAIL: scrollLeft is 0, expected -120
Attachments
Patch (5.69 KB, patch)
2020-03-20 19:12 PDT, Simon Fraser (smfr)
no flags
Radar WebKit Bug Importer
Comment 1 2020-03-19 12:44:01 PDT
Simon Fraser (smfr)
Comment 2 2020-03-20 09:25:41 PDT
I can reproduce.
Simon Fraser (smfr)
Comment 3 2020-03-20 18:10:55 PDT
We don't have WheelEventTestMonitor reasons for the key-scrolling behavior, which is that WebEditorClient::handleKeyboardEvent()calls down into WebPage::scroll() which ends up in FrameView::requestScrollPositionUpdate() and bounces to the scrolling thread, and then back to the main thread.
Simon Fraser (smfr)
Comment 4 2020-03-20 19:12:47 PDT
EWS
Comment 5 2020-03-20 22:54:57 PDT
Committed r258805: <https://trac.webkit.org/changeset/258805> All reviewed patches have been landed. Closing bug and clearing flags on attachment 394154 [details].
Note You need to log in before you can comment on or make changes to this bug.